# TP_POO

./: CMakeLists.txt  README.md
TP_2025_2026/: CMakeLists.txt  Mapa.cpp  Mapa.h
TP_2025_2026/Ferramentas/: Adubo.cpp  Adubo.h  Ferramenta.cpp  Ferramenta.h  Ferramentas.cpp  Ferramentas.h  Regador.cpp  Regador.h  TesouraDePoda.cpp  TesouraDePoda.h
TP_2025_2026/Jardim/: Jardim.cpp  Jardim.h  Simulador.h  Simulator.cpp  Solo.cpp  Solo.h
TP_2025_2026/Jardineiro/: Jardineiro.cpp  Jardineiro.h
TP_2025_2026/Plantas/: Cacto.cpp  Cacto.h  ErvaDaninha.cpp  ErvaDaninha.h  Exotica.cpp  Exotica.h  Planta.cpp  Planta.h  Roseira.cpp  Roseira.h
TP_2025_2026/Utils/: Buffer.cpp  Buffer.h  Comandos.cpp  Comandos.h  Settings.cpp  Settings.h
