cmake_minimum_required(VERSION 3.26)
project(TP_2025_2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(TP_2025_2026
        Simulator.cpp
        Simulador.h
        Settings.cpp
        Settings.h
        Comandos.cpp
        Comandos.h
        Mapa.cpp
        Mapa.h
        Planta.cpp
        Planta.h
        Jardim.cpp
        Jardim.h
        Buffer.cpp
        Buffer.h
        Solo.cpp
        Solo.h
        Jardineiro.cpp
        Jardineiro.h
        Ferramenta.cpp
        Ferramenta.h
        Cacto.cpp
        Cacto.h
        ErvaDaninha.cpp
        ErvaDaninha.h
        Exotica.cpp
        Exotica.h
        Roseira.cpp
        Roseira.h
        Regador.cpp
        Regador.h
        Adubo.cpp
        Adubo.h
        TesouraDePoda.cpp
        TesouraDePoda.h)
